structure agg, merchant and payment flows

--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -1,54 +1,71 @@
 ---
 sidebar_title: Aggregators
-page_title: UMAP - Quickstart Aggregators
+page_title: UMAP - API integration for merchants
 order: 1
 visible_in_sidebar: true
 ---
 
-## UMAP Quickstart for Aggregators
+
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium"> 
+        <strong>Prerequesites - </strong>
+        <a href="/payments/umap/quickstart/aggregators" target="_blank">
+            Aggregator Quickstart ↗ 
+        </a>
+    </Text>
+</Card>
+
+## Aggregator API Integration
 
 This guide will help you get started with UMAP integration as an Aggregator.
 
-### What is an Aggregator
+#### Step 1 — Configure a merchant
 
-`TODO : Write about what an Aggregator user is`
-
-You're not an Aggregator? Please refer to the [Quickstart](/payments/umap/quickstart) for other types of integration possible
-
-#### Step 1 — Start KYC and business documentation
-
+`TODO:`
 This is started once Setu’s sales team has interacted with you and confirmed integration. You will need to provide a few KYC details and review some agreements. Please reach out to <a href="">umap@setu.co</a> to get started.
 
 <hr class="primary" />
 
-#### Step 2 — Get API credentials
+#### Step 2 — Enable UPI products for merchant
 
+`TODO:`
 Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-secret` details. These credentials are required to make API calls on sandbox or production.
-
-<hr class="primary" />
-
-#### Step 3 — Test on sandbox
-
-You can use the API credentials provided by Setu to test UMAP on sandbox
 
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <p>ON POSTMAN</p>
-            <a
-                href="https://documenter.getpostman.com/view/22511424/2s9Y5VU4MC"
-                target="_blank"
-            >
-                Import Postman collection ->
+            <a href="/payments/umap/payments" target="_blank">
+                Payments
             </a>
+            <p>
+                Enable UPI payments with QR, Collect & TPV for your merchants.
+            </p>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <p>FOR API INTEGRATION</p>
-            <a href="/data/account-aggregator/api-integration" target="_blank">
-                Start API integration ->
+            <a href="/payments/umap/mandates" target="_blank">
+                Mandates
             </a>
+            <p>
+                Enable recurring payments with UPI Autopay for your merchants.
+            </p>
         </Card>
     </Portion>
 </Row>
+
+<hr class="primary" />
+
+#### Step 3 — Manage your merchants
+
+`TODO:`
+You can use the API credentials provided by Setu to test UMAP on sandbox
+
+<NextPage
+    info={{
+        description:
+            "Create your first merchant",
+        slug: "/payments/umap/merchant-onboarding",
+        title: "Merchant Onboarding",
+    }}
+/>
