--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -5,32 +5,50 @@ order: 2
 visible_in_sidebar: true
 ---
 
+
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium"> 
+        <strong>Prerequesites - </strong>
+        <a href="/payments/umap/api-integration/aggregators" target="_blank">
+            Aggregator API Integration ↗ 
+        </a>
+    </Text>
+</Card>
+
 ## Merchant Onboarding
+
+`TODO: Change the content`
 
 The merchant onboarding flow is a critical process designed to seamlessly integrate merchants into the UMAP ecosystem, enabling them to start accepting UPI payments. This journey involves several key steps, from initial information collection to the final activation of the merchant’s ability to process transactions.
 
-#### Information Collection
+<hr class="primary" />
+
+#### Step 1 - Information Collection
 The journey begins with the operations team gathering all necessary details from the merchant. This step is foundational, ensuring that the UMAP system has all the relevant information to proceed with the onboarding process.
 
-#### Merchant Record Creation
+<hr class="primary" />
+
+#### Step 2 - Create a Merchant
 Upon collecting the merchant's information, a preliminary verification is conducted. The merchant's record is then created in the UMAP system, marking the formal initiation of their onboarding journey.
 
 <a href="/payments/umap/merchant-onboarding/create-merchant-api"target="_blank">
 <code>Create Merchant API</code> ↗
 </a>
 
-#### Checking VPA Availability
-Before a merchant can start transactions, they need a Virtual Payment Address (VPA). The system checks for the availability of the desired VPA, ensuring it's unique and can be assigned to the merchant without conflicts.
+<hr class="primary" />
 
-<a href="/payments/umap/merchant-onboarding/check-vpa-availability-api"target="_blank">
-<code>Check VPA Availability API</code> ↗
-</a>
-
-#### VPA Creation
+#### Step 3 - VPA Creation
 If the VPA is available, it is created and assigned to the merchant. This final step equips the merchant with the capability to accept payments via UPI, completing the onboarding process and marking the beginning of their transaction journey on the UMAP platform.
 
 <a href="/payments/umap/merchant-onboarding/create-vpa-api"target="_blank">
 <code>Create VPA API</code> ↗
+</a>
+
+###### Checking VPA Availability (optional)
+Before a merchant can start transactions, they need a Virtual Payment Address (VPA). The system checks for the availability of the desired VPA, ensuring it's unique and can be assigned to the merchant without conflicts.
+
+<a href="/payments/umap/merchant-onboarding/check-vpa-availability-api"target="_blank">
+<code>Check VPA Availability API</code> ↗
 </a>
 
 By meticulously following these steps, UMAP ensures a smooth and efficient onboarding experience for merchants, setting the stage for their successful integration into the digital payments landscape.
@@ -39,6 +57,8 @@ By meticulously following these steps, UMAP ensures a smooth and efficient onboa
   src="https://storage.googleapis.com/strapi-assets/latest/merchant-onboarding/merchant-onboarding.png"
   alt="Bridge"
 />
+
+<hr class="primary" />
 
 ## Merchant Operations
 
@@ -49,9 +69,28 @@ If a merchant needs to be disabled by an aggregator then they can call this API 
 <code>Update Merchant Transaction Status API</code> ↗
 </a>
 
-#### Merchant Record Updation
+####  Merchant Record Updation
 This API can be called to update the information associated with the merchant like settlement configs, KYC information that may be required for accepting different payment instruments on UPI.
 
 <a href="/payments/umap/api-reference#/category~merchant/operation~merchant#updateConfig"target="_blank">
 <code>Update Merchant Configs API</code> ↗
 </a>
+
+<NextPage
+    info={{
+        description:
+            "Enable UPI payent with QR, Collect & TPV.",
+        slug: "/payments/umap/payments",
+        title: "Payments",
+    }}
+/>
+
+<NextPage
+    info={{
+        description:
+            "Enable recurring payments with UPI Autopay.",
+        slug: "/payments/umap/mandates",
+        title: "Mandates",
+    }}
+/>
+
