--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -1,11 +1,14 @@
 ---
-sidebar_title: Payments
-page_title: UMAP - Payments
+sidebar_title: UPI Payments
+page_title: UPI Payments
 order: 3
 visible_in_sidebar: true
 ---
 
-# UMAP Payments
+
+`TODO: add Prerequesites`
+
+# UPI Payments
 
 Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India that facilitates inter-bank transactions through a mobile platform. It enables the integration of multiple bank accounts into a single mobile application, offering a seamless and secure interface for initiating and managing financial transactions.
 
@@ -13,11 +16,19 @@ The API provides a standardized protocol for payment service providers and merch
 
 <br />
 
-###### Below are the available products from UMAP
+## How can you use UPI payments?
+`TODO: add use-cases`
+<hr class="primary" />
+
+###### Explore our UPI payment products
 
 <UMAPPayments />
 
+<hr class="primary" />
+
 ## Transaction Statuses
+
+`TODO: add status diagrams and short statuses`
 
 The UMAP platform ensures transparency throughout the transaction process by defining clear statuses that a transaction can assume from initiation to completion. These statuses reflect the transaction's current state, based on the responses received from various entities involved. Understanding these statuses will help merchants manage transactions effectively.
 
@@ -39,16 +50,28 @@ Another terminal state, indicating that the transaction did not go through. Reas
 
 Understanding these statuses allows merchants and stakeholders to effectively track and manage their transactions, ensuring a smooth operational flow and an optimal customer experience.
 
+<hr class="primary" />
+
 ## Conditional Flows
 
 Conditional flows are optional steps that may be executed in response to specific scenarios post-transaction:
 
-### Dispute Retrieval (fetchById disputes API)
+### Dispute Retrieval
 
 If a customer raises a dispute regarding a transaction, this API call allows for the retrieval of dispute details using a unique identifier, facilitating timely resolution.
 
-### Initiate Refund (create Refund API)
+### Initiate Refund
 
 In cases where a dispute arises or as a necessary step in the transaction process, a refund can be initiated. This API, typically prompted by the merchant, reverses the transaction amount to the customer.
 
 These steps and conditional flows ensure merchants can efficiently manage transactions, from initiation to resolution, providing a streamlined payment experience for customers through the UMAP platform.
+
+
+<NextPage
+    info={{
+        description:
+            "Explore recurring payments with UPI Autopay",
+        slug: "/payments/umap/mandates",
+        title: "Mandates",
+    }}
+/>
