--- a/content/payments/umap/payments/collect-request.mdx
+++ b/content/payments/umap/payments/collect-request.mdx
@@ -1,41 +1,42 @@
 ---
 sidebar_title: Collect Request
-page_title: UMAP - Payments - Collect Request
+page_title: UPI Payments - Collect
 order: 2
 visible_in_sidebar: true
 ---
 
-## Collect Request
+## Accept UPI payments with Collect Requests
 
 The Collect Request in UPI is a customer-driven payment mode where the merchant initiates a transaction by providing the customer's Virtual Payment Address (VPA). Upon initiation, the customer receives a notification on their UPI app to authorize the transaction, facilitating a seamless payment completion.
+
+<hr class="primary" />
+
+### Step 1 - Verify Customer VPA
+In collect, a merchant needs to accept customer vpa as input to create a collect request at customer’s UPI app. The merchant can verify the validity of the vpa input my the customer using this API.
 
 <a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"target="_blank">
     <code>Verify Customer VPA</code> ↗
 </a>
-<br/>
 
-### Verify Customer VPA(verify customer-vpa API): 
-In collect, a merchant needs to accept customer vpa as input to create a collect request at customer’s UPI app. The merchant can verify the validity of the vpa input my the customer using this API.
+<hr class="primary" />
 
+### Step 2 - Create Collect Request
+A collect product instance is created by the merchant inputting the customer's VPA. This action triggers a collect request, notifying the customer through their UPI app to proceed with the transaction.
 
 <a href="/payments/umap/api-reference#/category~collect/operation~collect#create"target="_blank">
     <code>Create Collect Request</code> ↗
 </a>
-<br/>
 
-### Collect Request Creation(create Collect API)
-A collect product instance is created by the merchant inputting the customer's VPA. This action triggers a collect request, notifying the customer through their UPI app to proceed with the transaction.
+<hr class="primary" />
 
+### Step 3 - Retrieve Collect Request
+After the customer responds to the collect request, transaction details can be fetched using a unique identifier or retrieval reference number, enabling merchants to access specific collect request.
 
-<br/>
 <a href="/payments/umap/api-reference#/category~collect/operation~collect#fetchById"target="_blank">
     <code>Fetch by ID</code> ↗
 </a>
-<br/>
 
-### Fetch Collect Request(fetchById API)
-After the customer responds to the collect request, transaction details can be fetched using a unique identifier or retrieval reference number, enabling merchants to access specific collect request.
-
+<hr class="primary" />
 
 ## Collect Flow Interactions
 
