--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -7,40 +7,41 @@ visible_in_sidebar: true
 
 ## UMAP Quickstart for Merchants
 
+<Callout type='warning'>
+💡 This quickstart is for a merchant, if you are an aggregator, please refer to 
+    <a href="#/payments/umap/quickstart" target="_blank">&nbsp;Quickstart</a>
+</Callout>
+
+
 This guide will help you get started with UMAP integration as an Merchant.
 
 ### What is an Merchant
 
 `TODO : Write about what an Merchant user is`
 
-You're not an Merchant? Please refer to the [Quickstart](/payments/umap/quickstart) for other types of integration possible
+<hr class="primary" />
+
 
 ### Get started
 
+##### Step 1 - Register on Bridge
 `TODO: Write about the bridge setup for merchants in steps`
 
-#### Step n — Test on sandbox
+<hr class="primary" />
 
-You can use the API credentials from Bridge to test UMAP on sandbox
+##### Step 2 - Get API credentials
+`TODO: Write about how to get api credentials`
 
-<Row>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <p>ON POSTMAN</p>
-            <a
-                href="https://documenter.getpostman.com/view/22511424/2s9Y5VU4MC"
-                target="_blank"
-            >
-                Import Postman collection ->
-            </a>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <p>FOR API INTEGRATION</p>
-            <a href="/data/account-aggregator/api-integration" target="_blank">
-                Start API integration ->
-            </a>
-        </Card>
-    </Portion>
-</Row>
+<hr class="primary" />
+
+##### Step 3. Authorization and access
+`TODO: You can use the API credentials from Bridge to test UMAP on sandbox`
+
+<NextPage
+    info={{
+        description:
+            "Get started with configuring UPI products",
+        slug: "/payments/umap/api-integration/merchants",
+        title: "API Integration",
+    }}
+/>
