--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -1,46 +1,51 @@
 ---
 sidebar_title: Merchants
-page_title: UMAP - Quickstart Merchants
+page_title: UMAP - API integration for merchants
 order: 2
 visible_in_sidebar: true
 ---
 
-## UMAP Quickstart for Merchants
+<Card padding="nano" shape="rounded" marginBottom="micro">
+    <Text size="medium" marginBottom="none" paddingRight="medium"> 
+        <strong>Prerequesites - </strong>
+        <a href="/payments/umap/quickstart/merchants" target="_blank">
+            Merchant Quickstart ↗ 
+        </a>
+    </Text>
+</Card>
+
+## Merchant API Integration
 
 This guide will help you get started with UMAP integration as an Merchant.
 
-### What is an Merchant
+### What can you do with UMAP?
+`TODO: explain some use-cases for merchants`
+1. Explain payments
+2. Explain mandates
 
-`TODO : Write about what an Merchant user is`
+<hr class="primary" />
 
-You're not an Merchant? Please refer to the [Quickstart](/payments/umap/quickstart) for other types of integration possible
-
-### Get started
-
-`TODO: Write about the bridge setup for merchants in steps`
-
-#### Step n — Test on sandbox
-
-You can use the API credentials from Bridge to test UMAP on sandbox
+### Select the right product for your use-case
 
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <p>ON POSTMAN</p>
-            <a
-                href="https://documenter.getpostman.com/view/22511424/2s9Y5VU4MC"
-                target="_blank"
-            >
-                Import Postman collection ->
+            <a href="/payments/umap/payments" target="_blank">
+                Payments
             </a>
+            <p>
+                Start accepting UPI payments with QR, Collect & TPV.
+            </p>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <p>FOR API INTEGRATION</p>
-            <a href="/data/account-aggregator/api-integration" target="_blank">
-                Start API integration ->
+            <a href="/payments/umap/mandates" target="_blank">
+                Mandates
             </a>
+            <p>
+                Start accepting recurring payments with UPI Autopay.
+            </p>
         </Card>
     </Portion>
 </Row>
