--- a/content/payments/umap/payments/tpv.mdx
+++ b/content/payments/umap/payments/tpv.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_title: TPV
-page_title: UMAP - Payments - TPV
+page_title: UPI Payments - Collect
 order: 3
 visible_in_sidebar: true
 ---
@@ -12,13 +12,25 @@ The Third Party Validation (TPV) request introduces an enhanced layer of securit
 ### TPV Process
 The TPV process is a mandatory check required for most capital markets merchants and is mandated by SEBI to ensure that funds are collected from a verified account of the customer only. It can also be beneficial for other use-cases like insurance, loans and loyalty programs.
 
-#### Payment Link Creation with Validation
+<hr class="primary" />
+
+#### Step 1 - Create Payment Link With Validation
 When creating a payment link, merchants have the option to include the customer's bank account details as part of the link creation request. This additional information is aimed at facilitating the validation process.
 
-#### Validation During Transaction
+<a href="/payments/umap/api-reference#/category~tpv/operation~tpv#createTPV"target="_blank">
+    <code>Create TPV Request</code> ↗
+</a>
+
+<hr class="primary" />
+
+#### Step 2 - Validate During Transaction
 As the transaction is initiated and processed through the UPI system, the bank account details provided at the payment stage are compared against those supplied by the merchant. This comparison is conducted in real-time, with the UMAP system receiving the customer's bank account details from NPCI.
 
-#### Transaction Acceptance or Rejection
+<hr class="primary" />
+
+#### Step 3 - Acceptance or Rejection Transaction
 Based on the outcome of the validation check, the UMAP system decides whether to accept or reject the transaction. If the customer’s bank account details match the details registered with the merchant, the transaction proceeds. If there is a discrepancy, the transaction is halted to prevent unauthorized payments.
+
+<hr class="primary" />
 
 This TPV process ensures an additional layer of security, aligning payment transactions with pre-verified bank account details, thus minimizing the risk of fraudulent transactions and enhancing trust between merchants and customers.
