--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -15,6 +15,8 @@ This guide will help you get started with UMAP integration as an Aggregator.
 
 You're not an Aggregator? Please refer to the [Quickstart](/payments/umap/quickstart) for other types of integration possible
 
+<Callout type='tip'>For custom configuration, reach out to <a href="">umap@setu.co</a></Callout>
+
 #### Step 1 — Start KYC and business documentation
 
 This is started once Setu’s sales team has interacted with you and confirmed integration. You will need to provide a few KYC details and review some agreements. Please reach out to <a href="">umap@setu.co</a> to get started.
@@ -27,28 +29,17 @@ Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-s
 
 <hr class="primary" />
 
-#### Step 3 — Test on sandbox
+#### Step 3 — Authorization and access
 
 You can use the API credentials provided by Setu to test UMAP on sandbox
 
-<Row>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <p>ON POSTMAN</p>
-            <a
-                href="https://documenter.getpostman.com/view/22511424/2s9Y5VU4MC"
-                target="_blank"
-            >
-                Import Postman collection ->
-            </a>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <p>FOR API INTEGRATION</p>
-            <a href="/data/account-aggregator/api-integration" target="_blank">
-                Start API integration ->
-            </a>
-        </Card>
-    </Portion>
-</Row>
+`TODO: add login API`
+
+<NextPage
+    info={{
+        description:
+            "Get started with integrating UPI on your platform",
+        slug: "/payments/umap/api-integration/aggregators",
+        title: "API Integration",
+    }}
+/>
