--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -9,17 +9,15 @@ visible_in_sidebar: true
 
 Get users' consent before you can start pulling their financial data with Setu AA by initiating Consent flow in your application. This flow broadly consists of two parts:
 
-1.  **Create Consent Request** — This is essentially a one-time data request that your user needs to approve. To know more details about this please visit [Consent Object](/data/account-aggregator/consent-object) page.
+1.  **Create consent request** — This is essentially a one-time data request that your user needs to approve. To know more details about this please visit [Consent Object](/data/account-aggregator/consent-object) page. Once a consent is created, you will receive a unique `id` with `status = PENDING`, along with a `url` where you can **redirect your customer to consent manager screens**, to review the data request. Here, the user may approve or reject the request
 
-- Once a consent is created, you will receive a unique `id` with `status = PENDING`, along with a `url` where you can **redirect your customer to consent manager screens**, to review the data request. Here, the user may approve or reject the request
+2.  **Consent status** — You can track the consent status with Get Consent Status API, alternatively Setu will notify you when the user has acted upon the consent request. See [Notifications](/data/account-aggregator/api-integration/notifications) to configure your notification endpoint.
 
-2. **Consent Request status** — You can track the consent status with Get Consent Status API, alternatively Setu will notify you when the user has acted upon the consent request. See [Notifications](/data/account-aggregator/api-integration/notifications) to configure your notification endpoint.
+Here are some more advanced features related to consents, which are explained in detail at the end.
 
-Consent Request has other functionalities that can FIUs can use according to their use case.
+1. **Dual consents** — Merge two consents into a single UI flow, with its own unique dual consent ID.
 
-1. **Dual Consent Request** - Merge two consents into a single UI flow, with its own unique dual consent ID.
-
-2. **Revoke Consent Request** - A revoke API for FIUs to withdraw or manually revoke an end users' consent for any purpose or on behalf of the customer
+2. **Revoke a consent** — A revoke API for FIUs to withdraw or manually revoke an end users' consent for any purpose or on behalf of the customer
 
 <hr class="primary" />
 
@@ -167,7 +165,7 @@ Call this API to create a consent request. The details of the request will be pr
 
 <hr class="primary" />
 
-### Consent Review by customer
+### Consent review by customer
 
 On redirecting your users to `url`, it opens up a Consent Manager that permits consent approval/rejection. This url can easily be embedded as a webview or be used to redirect from a website. The URL is of the form:
 
@@ -197,7 +195,7 @@ The following steps are handled by Setu’s screens—
 
 Call this API to get the consent details and the updated status of a consent request by passing its unique `id`.
 
-If the consent is approved, the Status in the response will be `ACTIVE`. After this, you can now initiate Data flow for the approved consent request.
+If the consent is approved, the status in the response will be `ACTIVE`. After this, you can now initiate Data flow for the approved consent request.
 
 <Callout type="highlight">
   Additionally, Setu AA will notify you on the consent status update by sending
@@ -206,6 +204,7 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
   <a href="/data/account-aggregator/api-integration/notifications">
     Consent Notifications
   </a>
+  .
 </Callout>{" "}
 
 <br />
@@ -364,13 +363,11 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
 
 <hr class="primary" />
 
-### Dual Consent Request
+### Dual consents
 
-In the Account Aggregator (AA) ecosystem in India, the Dual Consent feature allows Financial Information Users (FIUs) to streamline the process of obtaining consent from customers for data sharing. By merging two separate consent requests into a single flow, FIUs can enhance the user experience, reduce friction, and ensure higher completion rates for consent acquisition.
+In the Account Aggregator (AA) ecosystem in India, the dual consent feature allows Financial Information Users (FIUs) to streamline the process of obtaining consent from customers for data sharing. By merging two separate consent requests into a single flow, FIUs can enhance the user experience, reduce friction, and ensure higher completion rates for consent acquisition.
 
-This document details the API endpoint, request parameters, and usage examples for implementing the Dual Consent feature.
-
-<Callout type="warning">
+<Callout type="tip">
   Currently, the dual consent feature supports merging two consent requests. For
   more complex scenarios, consider additional consent requests as separate
   flows.
@@ -380,25 +377,23 @@ This document details the API endpoint, request parameters, and usage examples f
 
 ##### Features
 
-- **Single UI Flow**: Merges two consent requests into a single UI flow, displaying the consent parameters of each request in a consolidated manner.
+- **Single UI Flow** — Merges two consent requests into a single UI flow, displaying the consent parameters of each request in a consolidated manner.
 
-- **Optional and Mandatory Consents**: Offers flexibility in making one of the consents optional, while the other remains mandatory, allowing customers to choose which data they are willing to share.
+- **Optional and mandatory consents** — Offers flexibility in making one of the consents optional, while the other remains mandatory, allowing customers to choose which data they are willing to share.
 
-- **Unified OTP Authentication**: Simplifies the authentication process by requiring only a single set of OTP authentications for the dual consent flow.
+- **Unified OTP authentication** — Simplifies the authentication process by requiring only a single set of OTP authentications for the dual consent flow.
 
 <br />
 
-###### Implementation Guide
+##### Create multi consent API
 
-- Prepare Consent Requests: Prior to using the Dual Consent API, prepare the individual consent requests as per the standard procedure in the AA ecosystem.
+- Create individual consent requests — Prior to using the Dual consent API, create the individual consent requests as per the standard procedure in the AA ecosystem.
 
-- Initiate Dual Consent: Use the provided API endpoint to initiate a dual consent process by specifying which consents are optional and which are mandatory.
+- Create dual consent — Use the provided API endpoint to create a dual consent process by specifying which consents are optional and which are mandatory.
 
-- Handle Responses: On success, direct the customer to the redirectUrl for consent confirmation. Handle errors as per the error response structure.
+- Handle responses — On success, direct the customer to the redirectUrl for consent confirmation. Handle errors as per the error response structure.
 
-- Follow Up: Monitor the status of consent through the standard consent status APIs to ensure proper data flow post-consent.
-
-For further assistance or to report issues with the Dual Consent API, please contact our developer support team.
+- Follow up — Monitor the status of consent through the standard consent status APIs to ensure proper data flow post-consent.
 
 ###### Request
 
