Add details in the bill fetch webhook

--- a/content/payments/billpay/pre-built-screens/webhooks.mdx
+++ b/content/payments/billpay/pre-built-screens/webhooks.mdx
@@ -78,11 +78,14 @@ Below are the parameter tables and sample payloads for the listed events. Note t
     "mobileNumber": "9481773053",
     "status": "FETCH_SUCCESS",
     "billId": "490a8940-886e-45ed-bfd1-21dbed064373",
+    "billNumber": "6657801290", // if available
     "billerId": "MAHI00000NATIC",
     "billerName": "Mahindra Rural Housing Finance Ltd",
     "billerCategory": "Loan-Repayment",
     "billAmount": "101.0",
-    "dueDate": "2021-05-23",
+    "billDate":"2024-03-01"   // if available
+    "dueDate": "2024-03-20",  // if available
+    "customerName": "Ram Charan", // if available
     "sessionId": "7f6de02a-0061-403f-bd65-47d4b5f72c87",
     "event": "bill_fetch_success",
     "refId": "CMA0I65RCU2I32C3L0H0KNYQYAG40021831",
