Add dual consent screenshot

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -375,6 +375,8 @@ In the Account Aggregator (AA) ecosystem in India, the dual consent feature allo
 
 <br />
 
+<img src="https://storage.googleapis.com/strapi-assets/latest/dual-consent-approval-page/dual-consent-approval-page.png" />
+
 ##### Features
 
 - **Single UI Flow** — Merges two consent requests into a single UI flow, displaying the consent parameters of each request in a consolidated manner.
@@ -441,8 +443,7 @@ In the Account Aggregator (AA) ecosystem in India, the dual consent feature allo
 </CodeBlockWithCopy>
 
 <Callout type="warning">
-  At least one consent must be marked as mandatory to initiate the dual consent
-  process.
+  At least one consent must be marked as mandatory to create a dual consent
 </Callout>
 
 <br />
