--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -89,6 +89,14 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
+            <Text
+                size="small"
+                weight="600"
+                textColor="slate-60"
+                marginBottom="micro"
+            >
+                READ NEXT &rarr;
+            </Text>
             <p>For Aggregators</p>
             <a
                 href="https://documenter.getpostman.com/view/22511424/2s9Y5VU4MC"
@@ -100,6 +108,14 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
+            <Text
+                size="small"
+                weight="600"
+                textColor="slate-60"
+                marginBottom="micro"
+            >
+                READ NEXT &rarr;
+            </Text>
             <p>For Merchants</p>
             <a href="/data/account-aggregator/api-integration" target="_blank">
                 Start API integration ->
